--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nome do Produto"
+        android:text="Nome"
         android:textSize="18sp"/>
     <EditText
         android:layout_width="match_parent"
